# parallel-cellular-automata

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  barrier_8cpp.html  barrier_8hpp.html  barrier_8hpp_source.html  cellular__automata_8hpp.html  cellular__automata_8hpp_source.html  class_thread_joiner-members.html  class_thread_joiner.html  class_thread_safe_queue-members.html  class_thread_safe_queue.html  class_u_timer-members.html  class_u_timer.html  class_work_stealing_queue-members.html  class_work_stealing_queue.html  classca_1_1_abstract_cellular_automaton-members.html  classca_1_1_abstract_cellular_automaton.html  classca_1_1_barrier-members.html  classca_1_1_barrier.html  classca_1_1_grid-members.html  classca_1_1_grid.html  classca_1_1_threadpool-members.html  classca_1_1_threadpool.html  classca_1_1ffl_1_1_cellular_automaton-members.html  classca_1_1ffl_1_1_cellular_automaton.html  classca_1_1omp_1_1_cellular_automaton-members.html  classca_1_1omp_1_1_cellular_automaton.html  classca_1_1par_1_1_cellular_automaton-members.html  classca_1_1par_1_1_cellular_automaton.html  classca_1_1par_1_1bw_1_1_cellular_automaton-members.html  classca_1_1par_1_1bw_1_1_cellular_automaton.html  classca_1_1seq_1_1_cellular_automaton-members.html  classca_1_1seq_1_1_cellular_automaton.html  classes.html  (+42 more)
include/: barrier.hpp  ca_grid.hpp  cellular_automata.hpp  cuda_automaton.hpp  ff_automaton.hpp  grid.hpp  omp_automaton.hpp  parallel_automaton.cpp  parallel_automaton.hpp  parallel_automaton_busyw.hpp  queues.hpp  sequential_automaton.hpp  sequential_automaton_new.hpp  threadpool.hpp  utils.hpp  utimer.hpp
include/ff/: config.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+13 more)
src/: barrier.cpp  cellular_automata.cpp  cuda_automaton.cu  threadjoiner.cpp  threadpool.cpp  utimer.cpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  README.md  bech_all.cpp  bench_all.cpp  bench_omp_automaton.cpp  bench_parallel_automaton.cpp  bench_parallel_automaton_busywait.cpp  bench_sequential_automaton.cpp
tests/benchmarks/include/: benchutils.hpp
tests/benchmarks/outputs/: README.md  bench_256_workers_table.txt  bench_all_ryzen_13_01_22_14_43.json  bench_all_ryzen_5000_20iter.txt  bench_all_ryzen_no_pinning.txt  bench_all_xeon_12_01_22_18_21.json  bench_all_xeon_256_13_01_22_13_59.json  bench_all_xeon_mo_pinning_fix.txt  bench_all_xeon_no_pinning.txt  bench_busywait_ryzen_16.txt  bench_busywait_ryzen_and_xeon.txt  ryzen_no_pinning.txt
tests/profiling/: CMakeLists.txt  parallel.cpp
tests/scripts/: README.md  benchmark_plotter.py  get_benchmark_framework.sh  run_benchmarks.sh  run_tests.sh  valgrind_tests.sh
tests/unit/: CMakeLists.txt  README.md  test.cpp  test_all.cpp  test_barrier.cpp  test_catch_library.cpp  test_ff_automaton.cpp  test_get_neighborhood.cpp  test_grid.cpp  test_library_imports.cpp  test_omp_automaton.cpp  test_operators.cpp  test_parallel_automaton.cpp  test_queues_and_threadpool.cpp  test_same_computation.cpp  test_sequential_all.cpp  test_sequential_automaton.cpp  test_sequential_leaks_valgrind.cpp  test_threadpool.cpp  test_utilities.cpp  test_utils.cpp
